--- a/example/flex/flex.ipynb
+++ b/example/flex/flex.ipynb
@@ -2,7 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found existing installation: pykoi 0.0.5\n",
+      "Uninstalling pykoi-0.0.5:\n",
+      "  Successfully uninstalled pykoi-0.0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip uninstall -y pykoi\n",
+    "!pip list | grep pykoi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,28 +86,103 @@
     "import pykoi\n",
     "\n",
     "# enter openai api key here\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
     "os.environ[\"VECTORDB_PATH\"] = os.path.join(os.getcwd(), \"./vectordb\")\n",
     "MODEL_NAME = \"openai\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No new files to index.\n",
+      "Already indexed file names: {'Supply Agreement 2.docx', 'Supply Agreement 1.docx'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "## define DOC_PATH, vector db and index the docs\n",
+    "os.environ[\"DOC_PATH\"] = os.path.join(os.getcwd(), \"flex_sample\")\n",
+    "vector_db = pykoi.VectorDbFactory.create(model_source=MODEL_NAME, \n",
+    "                                         vector_db_name=\"chroma\")\n",
+    "vector_db.index()\n",
+    "\n",
+    "## define retrieval model\n",
+    "retrieval_model = pykoi.RetrievalFactory.create(model_source=MODEL_NAME, \n",
+    "                                                vector_db=vector_db)\n",
+    "# retrieval_model.run(\"Does the pricing exclude taxes?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "`run` not supported when there is not exactly one output key. Got ['result', 'source_documents'].",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m QA_dic_single \u001b[39m=\u001b[39m []\n\u001b[1;32m      3\u001b[0m \u001b[39mfor\u001b[39;00m q \u001b[39min\u001b[39;00m questions_single:\n\u001b[1;32m      4\u001b[0m     \u001b[39m# a = retrieval_model.run(q + prompt_yes_or_no)\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m     a \u001b[39m=\u001b[39m retrieval_model\u001b[39m.\u001b[39;49mrun({\u001b[39m\"\u001b[39;49m\u001b[39mquery\u001b[39;49m\u001b[39m\"\u001b[39;49m:q \u001b[39m+\u001b[39;49m prompt_yes_or_no})\n\u001b[1;32m      6\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mresult\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m:\u001b[39m\u001b[39m\"\u001b[39m, a[\u001b[39m\"\u001b[39m\u001b[39mresult\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[1;32m      7\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39msource_documents\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m:\u001b[39m\u001b[39m\"\u001b[39m, a[\u001b[39m\"\u001b[39m\u001b[39msource_documents\u001b[39m\u001b[39m\"\u001b[39m])\n",
+      "File \u001b[0;32m~/git/pykoi/pykoi/retrieval/llm/abs_llm.py:31\u001b[0m, in \u001b[0;36mAbsLlm.run\u001b[0;34m(self, message)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrun\u001b[39m(\u001b[39mself\u001b[39m, message: \u001b[39mstr\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mstr\u001b[39m:\n\u001b[1;32m     22\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[39m    Runs the language learning model.\u001b[39;00m\n\u001b[1;32m     24\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[39m        str: The response from the model.\u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 31\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_retrieve_qa\u001b[39m.\u001b[39;49mrun(message)\n",
+      "File \u001b[0;32m~/anaconda3/envs/0816a/lib/python3.10/site-packages/langchain/chains/base.py:285\u001b[0m, in \u001b[0;36mChain.run\u001b[0;34m(self, callbacks, tags, *args, **kwargs)\u001b[0m\n\u001b[1;32m    283\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Run the chain as text in, text out or multiple variables, text out.\"\"\"\u001b[39;00m\n\u001b[1;32m    284\u001b[0m \u001b[39m# Run at start to make sure this is possible/defined\u001b[39;00m\n\u001b[0;32m--> 285\u001b[0m _output_key \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_run_output_key\n\u001b[1;32m    287\u001b[0m \u001b[39mif\u001b[39;00m args \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m kwargs:\n\u001b[1;32m    288\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(args) \u001b[39m!=\u001b[39m \u001b[39m1\u001b[39m:\n",
+      "File \u001b[0;32m~/anaconda3/envs/0816a/lib/python3.10/site-packages/langchain/chains/base.py:270\u001b[0m, in \u001b[0;36mChain._run_output_key\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    267\u001b[0m \u001b[39m@property\u001b[39m\n\u001b[1;32m    268\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_run_output_key\u001b[39m(\u001b[39mself\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mstr\u001b[39m:\n\u001b[1;32m    269\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39moutput_keys) \u001b[39m!=\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m--> 270\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    271\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m`run` not supported when there is not exactly \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    272\u001b[0m             \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mone output key. Got \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39moutput_keys\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    273\u001b[0m         )\n\u001b[1;32m    274\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39moutput_keys[\u001b[39m0\u001b[39m]\n",
+      "\u001b[0;31mValueError\u001b[0m: `run` not supported when there is not exactly one output key. Got ['result', 'source_documents']."
+     ]
+    }
+   ],
+   "source": [
+    "## Answer the first set of questions\n",
+    "QA_dic_single = []\n",
+    "for q in questions_single:\n",
+    "    # a = retrieval_model.run(q + prompt_yes_or_no)\n",
+    "    a = retrieval_model.run({\"query\":q + prompt_yes_or_no})\n",
+    "    print(\"result\\n:\", a[\"result\"])\n",
+    "    print(\"source_documents\\n:\", a[\"source_documents\"])\n",
+    "    print(\"\\n\\n\\n\")\n",
+    "    QA_dic_single.append(a[\"result\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ## define DOC_PATH, vector db and index the docs\n",
-    "# os.environ[\"DOC_PATH\"] = os.path.join(os.getcwd(), \"flex_sample\")\n",
-    "# vector_db = pykoi.VectorDbFactory.create(model_name=MODEL_NAME, \n",
-    "#                                          vector_db_name=\"chroma\")\n",
-    "# vector_db.index()\n",
     "\n",
-    "# ## define retrieval model\n",
-    "# retrieval_model = pykoi.RetrievalFactory.create(model_name=MODEL_NAME, \n",
-    "#                                                 vector_db=vector_db)\n",
-    "# # retrieval_model.run(\"Does the pricing exclude taxes?\")"
+    "## Answer the color code question\n",
+    "color_code = retrieval_model.run(prompt_color_code)\n",
+    "QA_dic_single.append(color_code)\n",
+    "\n",
+    "## Add all the answers to the dataframe\n",
+    "df_single[doc_name] = QA_dic_single\n",
+    "\n",
+    "## Remove the vector db for new indexing\n",
+    "folder_path = \"vectordb\"\n",
+    "if os.path.exists(folder_path):\n",
+    "    shutil.rmtree(folder_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -100,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
