--- a/example/data_generation/immigration_gen_data_lmqg.ipynb
+++ b/example/data_generation/immigration_gen_data_lmqg.ipynb
@@ -5,42 +5,16 @@
    "id": "74b21eea-679e-4bfe-9b4f-919597ca7413",
    "metadata": {},
    "source": [
-    "# Generate question and answer pairs from text file"
+    "# Generate question and answer pairs from text file using open-source LLMs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "730c285c-af52-4ba4-8cb2-1a9e468af547",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: openai in /opt/conda/envs/pykoi/lib/python3.10/site-packages (0.27.8)\n",
-      "Requirement already satisfied: requests>=2.20 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from openai) (2.31.0)\n",
-      "Requirement already satisfied: tqdm in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from openai) (4.65.0)\n",
-      "Requirement already satisfied: aiohttp in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from openai) (3.8.5)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from requests>=2.20->openai) (3.2.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from requests>=2.20->openai) (3.4)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from requests>=2.20->openai) (2.0.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from requests>=2.20->openai) (2023.7.22)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from aiohttp->openai) (23.1.0)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from aiohttp->openai) (6.0.4)\n",
-      "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from aiohttp->openai) (4.0.2)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.0 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from aiohttp->openai) (1.9.2)\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from aiohttp->openai) (1.4.0)\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from aiohttp->openai) (1.3.1)\n",
-      "Requirement already satisfied: clean-text in /opt/conda/envs/pykoi/lib/python3.10/site-packages (0.6.0)\n",
-      "Requirement already satisfied: emoji<2.0.0,>=1.0.0 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from clean-text) (1.7.0)\n",
-      "Requirement already satisfied: ftfy<7.0,>=6.0 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from clean-text) (6.1.1)\n",
-      "Requirement already satisfied: wcwidth>=0.2.5 in /opt/conda/envs/pykoi/lib/python3.10/site-packages (from ftfy<7.0,>=6.0->clean-text) (0.2.6)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "! pip install openai\n",
     "! pip install clean-text\n",
     "\n",
     "import dataclasses\n",
@@ -55,7 +29,6 @@
     "import json\n",
     "import tqdm\n",
     "import copy\n",
-    "import openai\n",
     "import pandas as pd\n",
     "\n",
     "from typing import Optional, Sequence, Union\n",
@@ -63,10 +36,7 @@
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import SnowballStemmer\n",
-    "from nltk.tokenize import word_tokenize\n",
-    "\n",
-    "# from openai import openai_object\n",
-    "openai.api_key = \"\""
+    "from nltk.tokenize import word_tokenize"
    ]
   },
   {
@@ -76,14 +46,6 @@
    "source": [
     "## Load and preprocess"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a531961f-2e59-4437-b5b8-5a0798cd60bd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
