--- a/example/data_generation/immigration_gen_data_openai.ipynb
+++ b/example/data_generation/immigration_gen_data_openai.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1a8d522d",
+   "metadata": {},
+   "source": [
+    "# Generate question and answer pairs from text file using OpenAI"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "8e97c809-9637-4bcc-b1bf-d970ef8758e4",
